Update README for Director Script Actor architecture